ipc/ipdl/test/ipdl/error/undeclReturnType.ipdl
sync protocol undeclReturnType {

child:  sync Msg() returns (FARGLEGARGLE r);

};
